FIX: Top, Scrollbar, pop(DOM)

--- a/style/_pop.scss
+++ b/style/_pop.scss
@@ -81,6 +81,7 @@
     .pop{
         width: 40%;
         height: 20rem;
+        padding-left: 30%;
         &__close{
             font-size: 1.5em;
             position:absolute;
